[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/7 Hud elements/caixa_de_dialogo.png" type="Texture" id=1]
[ext_resource path="res://scenes/hud_elements/dialog_box.gd" type="Script" id=2]
[ext_resource path="res://fonts/Press_Start_2P/PressStart2P-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scenes/hud_elements/npc_speech.gd" type="Script" id=4]
[ext_resource path="res://scenes/hud_elements/feedback_box.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/players/sandra/sandra_idle.png" type="Texture" id=6]
[ext_resource path="res://assets/npc/diana.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=6]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 3 )

[sub_resource type="RectangleShape2D" id=3]

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="dialog_box" type="Sprite" parent="."]
position = Vector2( 629, 343 )
texture = ExtResource( 1 )

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
position = Vector2( 148, 79 )
scale = Vector2( 36.8, 24 )
shape = SubResource( 6 )

[node name="npc_speech" type="Label" parent="."]
margin_left = 382.0
margin_top = 133.0
margin_right = 820.0
margin_bottom = 261.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
autowrap = true
script = ExtResource( 4 )
__meta__ = {
"_editor_description_": ""
}

[node name="npc_tween" type="Tween" parent="npc_speech"]

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 212.0
margin_top = 389.0
margin_right = 418.0
margin_bottom = 495.0
color = Color( 0.882353, 0.513726, 0.231373, 1 )

[node name="option_1" type="TouchScreenButton" parent="ColorRect"]
scale = Vector2( 10.3, 5.3 )
shape = SubResource( 2 )

[node name="Label" type="Label" parent="ColorRect"]
margin_left = 9.0
margin_top = 6.0
margin_right = 197.0
margin_bottom = 100.0
custom_colors/font_color = Color( 0.894118, 0.894118, 0.894118, 1 )
custom_fonts/font = SubResource( 4 )
align = 1
valign = 1
autowrap = true

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 429.0
margin_top = 389.0
margin_right = 635.0
margin_bottom = 495.0
color = Color( 0.882353, 0.513726, 0.231373, 1 )

[node name="option_2" type="TouchScreenButton" parent="ColorRect2"]
scale = Vector2( 10.3, 5.3 )
shape = SubResource( 3 )

[node name="Label" type="Label" parent="ColorRect2"]
margin_left = 9.0
margin_top = 7.0
margin_right = 197.0
margin_bottom = 101.0
custom_colors/font_color = Color( 0.894118, 0.894118, 0.894118, 1 )
custom_fonts/font = SubResource( 5 )
align = 1
valign = 1
autowrap = true

[node name="npc_sprite" type="Sprite" parent="."]
position = Vector2( 253, 198 )
texture = ExtResource( 7 )
hframes = 4

[node name="player_sprite" type="Sprite" parent="."]
position = Vector2( 769, 443 )
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 6 )
flip_h = true
hframes = 4

[node name="feedback_box" parent="." instance=ExtResource( 5 )]
visible = false
position = Vector2( 630, 340 )

[connection signal="pressed" from="TouchScreenButton" to="." method="_on_TouchScreenButton_pressed"]
[connection signal="pressed" from="ColorRect/option_1" to="." method="_on_option_1_pressed"]
[connection signal="pressed" from="ColorRect2/option_2" to="." method="_on_option_2_pressed"]
